cmake_minimum_required(VERSION 3.5)
project(formatter_ex)

add_subdirectory(../formatter_lib formatter)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(formatter_ex STATIC formatter_ex.cpp)

target_include_directories(
    formatter_ex 
    PRIVATE 
    ../formatter_lib
)

target_link_libraries(formatter_ex PRIVATE formatter)
